--- a/day11/html/ex02.table.html
+++ b/day11/html/ex02.table.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../mainStyle.css/style.css">
+    <link rel="stylesheet" href="../mainStyle.css/style.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="box" tabindex="1"></div>
+    <input type="text">
+    <!-- emmit div>span*3 -->
+    <div>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!-- img -->
+    <img class = "shin1" src="../imgs/sinZzang1.jpeg" alt="졸귀">
+    <img class = "shin2" src="../imgs/sinZzang2.jpeg" alt="졸귀">
+    <!--  -->
+    <div class="fruits">
+        <span>딸기</span>
+        <span>수박</span>
+        <div>오렌지</div>
+        <p>망고</p>
+        <h3>사과</h3>
+    </div>
 </body>
 </html>
